# groundx-sdks

./: .spectral.yaml  LICENSE  README.md  STATISTICS.md  api.yaml  document.txt  konfig.yaml
sdks/python/: .gitignore  .konfigignore  LICENSE  README.md  pyproject.toml  setup.py
sdks/python/.konfig/: generate-id.txt
sdks/python/docs/models/: ApiKeyManagementList405Response.md  ApiKeyManagementListResponse.md  ApiKeyManagementListResponseApiKeys.md  ApiKeyManagementListResponseApiKeysItem.md  BucketCreateRequest.md  BucketCreateRequestBucket.md  BucketDeleteResponse.md  BucketDetail.md  BucketListResponse.md  BucketResponse.md  BucketUpdateRequest.md  BucketUpdateRequestBucket.md  DocumentDeleteResponse.md  DocumentListResponse.md  DocumentLocalUploadRequest.md  DocumentLocalUploadRequestBlob.md  DocumentLocalUploadRequestItem.md  DocumentLocalUploadRequestItemMetadata.md  DocumentLocalUploadRequestMetadata.md  DocumentLookupResponse.md  DocumentRemoteUploadRequest.md  DocumentRemoteUploadRequestDocuments.md  DocumentRemoteUploadRequestDocumentsItem.md  DocumentResponse.md  DocumentResponseDocument.md  DocumentType.md  (+42 more)
sdks/python/groundx/: __init__.py  api_client.py  api_response.py  client.py  client.pyi  client_custom.py  configuration.py  exceptions.py  exceptions_base.py  operation_parameter_map.py  request_after_hook.py  request_before_hook.py  request_before_url_hook.py  rest.py  schemas.py  type_util.py  validation_metadata.py  xray.py  xray_uploader.py
sdks/python/test/: test_check_url.py  test_deprecation_warning.py  test_quick_start.py  test_simple.py
(+803 files in other folders)
