[tool.poetry]
name = "groundx-python-sdk"
version = "1.3.1"
description = "Client for GroundX API"
authors = ["Konfig <support@groundx.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "groundx"}]

[tool.poetry.dependencies]
python = "^3.7"
certifi = ">=2023.7.22"
python-dateutil = "^2.8.2"
typing_extensions = "^4.3.0"
urllib3 = "^1.26.7"
validators = "^0.20.0"
frozendict = "^2.3.4"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
setuptools = "^65.5.1"
pytest = "^7.3.1"
pytest-cov = "2.8.1"
pytest-randomly = "1.2.3"
build = "^0.10.0"
twine = "^4.0.2"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
